--- a/lang/ja.json
+++ b/lang/ja.json
@@ -1,3 +1,8 @@
 {
-
+    "Hello!": "お問い合わせくださり、ありがとうございます。",
+    "Reset Password Notification": "パスワードリセットのご確認",
+    "You are receiving this email because we received a password reset request for your account.": "あなたのアカウントからパスワードリセットのリクエストを受け付けました。",
+    "Reset Password": "新しいパスワードを設定する",
+    "This password reset link will expire in :count minutes.": "このリンクは :count 分後に無効になります。",
+    "If you did not request a password reset, no further action is required.": "もしパスワードリセットに心当たりがない場合は、このメールは無視してください。"
 }
