--- a/lang/ja.json
+++ b/lang/ja.json
@@ -4,5 +4,7 @@
     "You are receiving this email because we received a password reset request for your account.": "あなたのアカウントからパスワードリセットのリクエストを受け付けました。",
     "Reset Password": "新しいパスワードを設定する",
     "This password reset link will expire in :count minutes.": "このリンクは :count 分後に無効になります。",
-    "If you did not request a password reset, no further action is required.": "もしパスワードリセットに心当たりがない場合は、このメールは無視してください。"
+    "If you did not request a password reset, no further action is required.": "もしパスワードリセットに心当たりがない場合は、このメールは無視してください。",
+    "Regards,": " ",
+    "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "\":actionText\" ボタンをクリックしてもうまくいかない場合、次のURLをコピーしブラウザのURL欄に貼り付けて移動してください。\n"
 }
