--- a/lang/frontend/ja.json
+++ b/lang/frontend/ja.json
@@ -15,6 +15,12 @@
     "registerButton": "登録する",
     "submitButton": "送信する",
     "resetButton": "リセットする",
+    "notSet": "未設定",
+    "language": "言語",
+    "languageLabel": {
+        "ja": "日本語",
+        "en": "英語"
+    },
     "Auth": {
         "forgotPassword": "パスワードを忘れた方はこちら",
         "forgotPasswordHelp": "パスワードを忘れた方は次のフォームにメールアドレスを入力し送信してください。",
