Updating frontend language files

--- a/lang/frontend/en.json
+++ b/lang/frontend/en.json
@@ -18,7 +18,7 @@
     "notSet": "Not set",
     "language": "Language",
     "languageLabel": {
-        "ja": "Japanese",
+        "ja": "日本語（Japanese）",
         "en": "English"
     },
     "Auth": {
