--- a/lang/frontend/en.json
+++ b/lang/frontend/en.json
@@ -24,6 +24,8 @@
     "posts": "Posts",
     "noPostsMessage": "There are no posts.",
     "postCreatedAt": "Posted",
+    "postDeleteButtonLabel": "Delete",
+    "postDeleteConfirm": "Are you sure you want to delete this post?",
     "Auth": {
         "forgotPassword": "Forgot your password?",
         "forgotPasswordHelp": "If you have forgotten your password, please enter your email address in the form below and submit.",
