--- a/lang/frontend/en.json
+++ b/lang/frontend/en.json
@@ -16,6 +16,13 @@
     "submitButton": "Submit",
     "resetButton": "Reset",
     "notSet": "Not set",
+    "displayOptions": "Display options",
+    "colorScheme": "Color scheme",
+    "colorSchemeTheme": {
+        "light": "Light",
+        "dark": "Dark",
+        "system": "Follow the system"
+    },
     "language": "Language",
     "languageLabel": {
         "ja": "日本語（Japanese）",
@@ -26,17 +33,34 @@
     "postCreatedAt": "Posted",
     "postDeleteButtonLabel": "Delete",
     "postDeleteConfirm": "Are you sure you want to delete this post?",
+    "auth": {
+        "LoginForm": {
+            "title": "Log in form",
+            "description": "If you already have an account, please log in by entering your registration information in the form below."
+        },
+        "RegisterForm": {
+            "title": "Register form",
+            "description": "If you do not have an account, please register your account by filling out the required information in the form below."
+        },
+        "PasswordResetForm": {
+            "title": "Password reset form",
+            "description": "If you have forgotten your account password, please enter your account email address in the form below and submit."
+        }
+    },
+    "post": {
+        "PostCreationForm": {
+            "title": "New post",
+            "label": "New post",
+            "placeholder": "Post content(Maximum :max characters)",
+            "submit": "Post"
+        }
+    },
     "Auth": {
-        "forgotPassword": "Forgot your password?",
-        "forgotPasswordHelp": "If you have forgotten your password, please enter your email address in the form below and submit.",
-        "registerLink": "If you don't have an account",
-        "loginLink": "Already have an account?",
-        "heading": "Log in",
-        "description": "Log in."
     },
     "Dashboard": {
         "heading": "Dashboard",
-        "description": "Your account information."
+        "description": "Your account information.",
+        "yourPosts": "Your posts"
     },
     "PasswordReset": {
         "heading": "Password reset",
