--- a/lang/frontend/en.json
+++ b/lang/frontend/en.json
@@ -33,19 +33,10 @@
     "postCreatedAt": "Posted",
     "postDeleteButtonLabel": "Delete",
     "postDeleteConfirm": "Are you sure you want to delete this post?",
+    "readMore": "Read more",
+    "returnToPrevious": "Return to previous page",
+    "complete": "Complete",
     "auth": {
-        "LoginForm": {
-            "title": "Log in form",
-            "description": "If you already have an account, please log in by entering your registration information in the form below."
-        },
-        "RegisterForm": {
-            "title": "Register form",
-            "description": "If you do not have an account, please register your account by filling out the required information in the form below."
-        },
-        "PasswordResetForm": {
-            "title": "Password reset form",
-            "description": "If you have forgotten your account password, please enter your account email address in the form below and submit."
-        }
     },
     "post": {
         "PostCreationForm": {
@@ -55,16 +46,38 @@
             "submit": "Post"
         }
     },
-    "Auth": {
-    },
     "Dashboard": {
         "heading": "Dashboard",
         "description": "Your account information.",
         "yourPosts": "Your posts"
     },
-    "PasswordReset": {
-        "heading": "Password reset",
-        "description": "Set a new password.",
-        "newPasswordHelp": "Please enter your new password."
+    "Pages": {
+        "Welcome": {
+            "copy": "Welcome.",
+            "lead": "Log in and start sharing what's going on with your loved ones.",
+            "haveAccount": "If you have an account",
+            "openLoginForm": "Open login form",
+            "or": "or",
+            "haveNoAccount": "Don't have an account yet?",
+            "openRegisterForm": "Open Register form",
+            "forgotPassword": "Forgot your password?",
+            "LoginForm": {
+                "title": "Log in form",
+                "description": "If you already have an account, please log in by entering your registration information in the form below."
+            },
+            "RegisterForm": {
+                "title": "Register form",
+                "description": "If you do not have an account, please register your account by filling out the required information in the form below."
+            }
+        },
+        "PasswordResetRequest": {
+            "title": "Password reset form",
+            "description": "If you have forgotten your account password, please enter your account email address in the form below and submit."
+        },
+        "PasswordReset": {
+            "heading": "Password reset",
+            "description": "Set a new password.",
+            "newPasswordHelp": "Please enter your new password."
+        }
     }
 }
