--- a/lang/frontend/ja.json
+++ b/lang/frontend/ja.json
@@ -33,51 +33,61 @@
     "postCreatedAt": "投稿日時",
     "postDeleteButtonLabel": "削除する",
     "postDeleteConfirm": "本当にこの投稿を削除してよろしいですか？",
-    "readMore": "くわしく見る",
-    "returnToPrevious": "前のページに戻る",
+    "readMore": "くわしく読む",
     "complete": "完了",
-    "auth": {
-    },
-    "post": {
-        "PostCreationForm": {
-            "title": "新しい投稿",
-            "label": "新しい投稿",
-            "placeholder": "投稿内容（最大 :max 文字）",
-            "submit": "投稿する"
+    "components": {
+        "auth": {
+            "LoginForm": {
+                "forgotPassword": "パスワードを忘れた方はこちら",
+                "forgotPasswordHelp": "ポップアップウィンドウで開きます。",
+                "register": "新規アカウント登録はこちら"
+            },
+            "PasswordResetRequestForm": {
+                "title": "パスワードの再設定",
+                "description": "お持ちのアカウントのパスワードを忘れた方は、次のフォームに、アカウントのメールアドレスを入力し送信してください。"
+            },
+            "RegisterForm": {}
+        },
+        "post": {
+            "PostCreationForm": {
+                "title": "新しい投稿",
+                "label": "新しい投稿",
+                "placeholder": "投稿内容（最大 :max 文字）",
+                "submit": "投稿する"
+            }
         }
     },
-    "Dashboard": {
-        "heading": "ダッシュボード",
-        "description": "アカウントに関する情報です。",
-        "yourPosts": "あなたの投稿"
+    "layouts": {
+        "welcome": {
+            "copy": "ようこそ。",
+            "lead": "ログインして親しい人と近況の共有を始めましょう。"
+        }
     },
     "Pages": {
         "Welcome": {
-            "copy": "ようこそ。",
-            "lead": "ログインして親しい人との近況の共有を始めましょう。",
             "haveAccount": "アカウントをお持ちの方",
             "openLoginForm": "ログインフォーム",
-            "or": "もしくは",
             "haveNoAccount": "まだアカウントをお持ちでない方",
-            "openRegisterForm": "アカウント作成フォーム",
-            "forgotPassword": "パスワードを忘れた方はこちら",
-            "LoginForm": {
-                "title": "ログインフォーム",
-                "description": "アカウントをお持ちの方は、次のフォームに登録情報を入力しログインしてください。"
-            },
-            "RegisterForm": {
-                "title": "登録フォーム",
-                "description": "アカウントをお持ちでない方は、次のフォームに必要事項を入力しアカウントを登録してください。"
-            }
+            "openRegisterForm": "新規アカウント登録"
         },
-        "PasswordResetRequest": {
-            "title": "パスワード再設定フォーム",
-            "description": "お持ちのアカウントのパスワードを忘れた方は、次のフォームに、アカウントのメールアドレスを入力し送信してください。"
+        "Login": {
+            "title": "ログインフォーム",
+            "description": "アカウントをお持ちの方は、次のフォームに登録情報を入力しログインしてください。"
         },
         "PasswordReset": {
             "heading": "パスワードリセット",
             "description": "新しいパスワードを設定します。",
             "newPasswordHelp": "新しいパスワードを入力してください。"
+        },
+        "Register": {
+            "title": "新規アカウント登録フォーム",
+            "description": "アカウントをお持ちでない方は、次のフォームに必要事項を入力しアカウントを登録してください。",
+            "login": "すでにアカウントをお持ちの方は、こちらからログイン"
+        },
+        "Dashboard": {
+            "heading": "ダッシュボード",
+            "description": "アカウントに関する情報です。",
+            "yourPosts": "あなたの投稿"
         }
     }
 }
